# shelfside

./: .env.example  .gitignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  project.md  roadmap.md  vite.config.js  vitest.config.ts
assets/app-icon/: icon-manifest.json
migrations/: 001_initial.sql  002_catalog_library.sql
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-android-storage.toml
src-tauri/src/: android_storage.rs  lib.rs  main.rs
src/lib/: platform.test.ts  platform.ts
src/lib/actions/: longPress.test.ts  longPress.ts
src/lib/api/: index.ts  userFacingError.test.ts  userFacingError.ts
src/lib/components/: AddToLibraryMenuButton.svelte  FilterChipBar.svelte  FilterChipBar.svelte.test.ts  OpenLibraryRelatedSuggestionsBlock.svelte  RelatedSuggestionsBlock.svelte  SearchResultsPagination.svelte  TmdbAddMenuButton.svelte  TmdbRelatedSuggestionsBlock.svelte  TmdbRelatedSuggestionsBlock.svelte.test.ts  ViewToggle.svelte
src/lib/db/: catalog.test.ts  catalog.ts  connection.test.ts  connection.ts  index.test.ts  index.ts  library.test.ts  library.ts  libraryRules.test.ts  libraryRules.ts  migrate.test.ts  migrate.ts  reset.test.ts  reset.ts  stats.test.ts  stats.ts  types.ts
src/lib/export/: backup.ts  csv.test.ts  csv.ts  dbInfo.ts  markdown.test.ts  markdown.ts  saveDestination.test.ts  saveDestination.ts  slug.test.ts  slug.ts
src/lib/i18n/: catalogLocale.test.ts  catalogLocale.ts  en.ts  es.test.ts  es.ts  i18n.test.ts  index.ts  labels.test.ts  labels.ts  locale.svelte.ts  locale.ts
src/lib/logs/: runtimeLogs.ts
src/lib/nav/: navActive.test.ts  navActive.ts  (+2 more)
src/routes/: +layout.svelte  +page.svelte  layout.svelte.test.ts  page.svelte.test.ts
src/test/: LayoutHarness.svelte
(+91 files in other folders)
